syntax = "proto3";

option csharp_namespace = "SideCar";
package persistence;

service Persistence {
  rpc StoreValue (StoreRequest) returns (StoreReply);
  rpc RetrieveValue (RetrieveRequest) returns (RetrieveReply);
}

message StoreRequest {
  string store_name = 1;
  string key = 2;
  string data = 3;
}

message RetrieveRequest {
  string store_name = 1;
  string key = 2;
}

message StoreReply {
  bool success = 1;
};

message RetrieveReply {
  bool success = 1;
  string data = 2;
};